<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/concernsFragment"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_message"
        android:enabled="true"
        android:title="@string/message" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_people"
        android:enabled="true"
        android:title="@string/advisers" />
    <item
        android:id="@+id/adviserFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_video_call_24"
        android:title="@string/video" />
</menu>