<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConcernNewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/enter_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- //////// NAME FIELD  ////////  -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/leave_a_reason">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_EditText"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:lines="10"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:minLines="10"
                android:gravity="top|left"
                android:scrollbars="vertical"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/issueTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:endIconMode="dropdown_menu"
            android:hint="@string/select_the_category">

            <AutoCompleteTextView
                android:id="@+id/issueAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/adviserTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:endIconMode="dropdown_menu"
            android:hint="@string/select_the_advisers">

            <AutoCompleteTextView
                android:id="@+id/adviserAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_image_buttonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image" />
        <!-- //////// UPLOAD IMAGE FIELD  ////////  -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            tools:ignore="ContentDescription" />

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/upload_video_buttonView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/upload_video" />-->
        <!-- //////// UPLOAD VIDEO FIELD  ////////  -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_buttonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>
</ScrollView>